Fixed UL align

--- a/src/Login_Page/Login.css
+++ b/src/Login_Page/Login.css
@@ -31,7 +31,7 @@
 
 .column-2 hr{
   width: 450px;
-  justify-content: flex-start;
+
 }
 
 .column-1 hr{
@@ -62,5 +62,6 @@
   flex:25%
 }
 
-
-
+.row-2 ul{
+  width: 400px;
+}
